# aptos-ctf-framework

./: Cargo.toml  README.md
apt-ctf-framework/: Cargo.toml  adapter.patch
apt-ctf-framework/example/challenge_example/: run_server.sh
apt-ctf-framework/example/challenge_example/framework-solve/dependency/sources/: module.move
apt-ctf-framework/example/challenge_example/framework-solve/solve/: Move.toml
apt-ctf-framework/example/challenge_example/framework-solve/solve/sources/: module.move
apt-ctf-framework/example/challenge_example/framework/src/: main.rs
apt-ctf-framework/src/: lib.rs
example/challenge_example/framework/: Cargo.toml
examples/challenge_example/: run_client.sh
examples/challenge_example/framework/: Cargo.toml
examples/challenge_example/framework-solve/src/: main.rs
examples/challenge_example/framework/challenge/: Move.toml
examples/challenge_example/framework/src/: main.rs
src/: lib.rs
